--- a/manifest/js-echoskill-manifest-1.0.json
+++ b/manifest/js-echoskill-manifest-1.0.json
@@ -15,10 +15,10 @@
     ],
     "endpoints": [
       {
-        "name": "default",
+        "name": "PROD",
         "protocol": "BotFrameworkV3",
-        "description": "Default endpoint for the skill",
-        "endpointUrl": "http://echoskillbot.contoso.com/api/messages",
+        "description": "endpoint for the skill",
+        "endpointUrl": "https://tobomedechoskill.azurewebsites.net/api/messages",
         "msAppId": "26fa7983-deb4-4ad1-878a-07dd802a2f83"
       }
     ]
