--- a/manifest/js-echoskill-manifest-2.0.json
+++ b/manifest/js-echoskill-manifest-2.0.json
@@ -22,11 +22,18 @@
             "msAppId": "a37ca58e-3948-4fb4-9112-c5779cfba661"
         },
         {
+            "name": "PROD Multi",
+            "protocol": "BotFrameworkV3",
+            "description": "Production endpoint for EchoSkillBot",
+            "endpointUrl": "https://tobomedechoskill.azurewebsites.net/api/messages",
+            "msAppId": "60aade68-28c9-4d00-b3da-fd90ee727c89"
+        },
+        {
             "name": "DEV",
             "protocol": "BotFrameworkV3",
             "description": "develppment endpoint for EchoSkillBot",
             "endpointUrl": "http://localhost:39783/api/messages",
             "msAppId": ""
-    }
+        }
     ]
 }
