--- a/manifest/js-echoskill-manifest-2.0.json
+++ b/manifest/js-echoskill-manifest-2.0.json
@@ -3,7 +3,7 @@
     "$id": "",
     "name": "CustomVisionBot",
     "version": "1.0",
-    "description": "This is a sample skill",
+    "description": "This is a sample skill for custom vision integration",
     "publisherName": "CoSo",
     "privacyUrl": "https://www.corporatesoftware.ch/privacy-policy-imprint",
     "copyright": "Copyright (c) Corporate Software AG. All rights reserved.",
