--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
         "url": "https://github.com"
     },
     "dependencies": {
+        "axios": "^0.24.0",
         "botbuilder": "~4.15.0",
-        "botframework-connector": "~4.15.0",
         "botbuilder-dialogs": "~4.15.0",
+        "botframework-connector": "~4.15.0",
         "dotenv": "~8.2.0",
         "restify": "~8.6.0"
     },
